# course_work_django

./: .env.sample  pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: send_mails.py
mailing/migrations/: 0001_initial.py  0002_client_owner_mailing_owner_mailingattempt_owner_and_more.py  0003_remove_client_owner_remove_mailing_owner_and_more.py  0004_client_owner_mailing_owner_mailingattempt_owner_and_more.py  0005_alter_mailingattempt_date_attempt.py  0006_alter_client_email_alter_client_owner_and_more.py  0007_alter_message_owner.py  0008_alter_message_options.py  0009_alter_mailingattempt_owner.py  0010_alter_client_options_alter_mailing_options_and_more.py  0011_alter_client_options.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  home_page.html  mailing_attempt_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
mailing/templates/mailing/includes/: inc_menu.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_is_blocked.py  0003_alter_user_options.py
users/templates/users/: login.html  register.html  user_list.html
